Completamento della issue #10